--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "googlebooks-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "node server/src/server.js",
+    "start": "ts-node server/src/server.ts",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@apollo/client": "^3.11.10",
