--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,11 @@
     "exactOptionalPropertyTypes": true /* Interpret optional property types as written, rather than adding 'undefined'. */,
     "noImplicitReturns": true /* Enable error reporting for codepaths that do not explicitly return in a function. */,
     "noImplicitOverride": true /* Ensure overriding members in derived classes are marked with an override modifier. */,
-    "useUnknownInCatchVariables": true /* Ensure 'unknown' is used for catch clause variables. */
-  }
+    "useUnknownInCatchVariables": true /* Ensure 'unknown' is used for catch clause variables. */,
+
+    /* Output Directory */
+    "outDir": "./dist" /* Redirect output structure to the dist directory. */
+  },
+  "include": ["src/**/*"], /* Include all TypeScript files in the src directory. */
+  "exclude": ["node_modules", "dist"] /* Exclude node_modules and dist directories. */
 }
