--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     /* Output Directory */
     "outDir": "./dist" /* Redirect output structure to the dist directory. */
   },
-  "include": ["src/**/*"], /* Include all TypeScript files in the src directory. */
+  "include": ["server/src/**/*"], /* Include all TypeScript files in the src directory. */
   "exclude": ["node_modules", "dist"] /* Exclude node_modules and dist directories. */
 }
