--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "start": "ts-node server/src/server.ts",
+    "start": "cd server && npm start",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
@@ -16,10 +16,5 @@
   "devDependencies": {
     "concurrently": "^8.2.0",
     "ts-node": "^10.9.2"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.11.10",
-    "apollo-server-express": "^3.13.0",
-    "graphql": "^16.9.0"
   }
 }
